feat: add multi node deploy

--- a/config.toml
+++ b/config.toml
@@ -12,10 +12,20 @@ proxy = ["http://127.0.0.1:4780", "http://127.0.0.1:4780"]
 [storage]
 dsn = "root:admin123@tcp(127.0.0.1:3306)/test?charset=utf8"
 
-[GRPCServer]
+[MasterServer]
 HTTPListenAddress = ":8081"
-GRPCListenAddress = "localhost:50051"
+GRPCListenAddress = "localhost:8082"
 ID = "1"
+RegistryAddress = ":2379"
+RegisterTTL = 60
+RegisterInterval = 15
+ClientTimeOut   = 10
+Name = "go.micro.server.master"
+
+[WorkerServer]
+HTTPListenAddress = ":9091"
+GRPCListenAddress = "localhost:9092"
+ID = "2"
 RegistryAddress = ":2379"
 RegisterTTL = 60
 RegisterInterval = 15
